@@ -1,9 +1,12 @@
 # For more information about tox, see https://tox.readthedocs.io/en/latest/
 [tox]
-envlist = py27,py36,flake8
+envlist = py27-pytest_latest,py36-{pytest_lastv3,pytest_latest},flake8
 
 [testenv]
-deps = pytest
+deps =
+    pytest_oldest: pytest==3.1.0
+    pytest_lastv3: pytest==3.10.1
+    pytest_latest: pytest>=4.0.0
 commands = {envpython} -m pytest {posargs:tests}
 # we need a valid $HOME for ansible-playbook run
 passenv = HOME
